[metadata]
name = desc-wfmon
version = 0.00.01
author = David Adams
author_email = dladams@bnl.gov
description = 'DESC workflow monitor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LSSTDESC/desc-wfmon
project_urls =
    Bug Tracker = https://github.com/LSSTDESC/desc-wfmon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause
    Operating System :: OS Independent

[options]
package_dir =
    = desc
packages = find:
python_requires = >=3.8

[options.packages.find]
where = desc
