[metadata]
name = desc-wfmon
version = 0.15.0
author = David Adams
author_email = dladams@bnl.gov
description = 'DESC workflow monitor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LSSTDESC/desc-wfmon
project_urls =
    Bug Tracker = https://github.com/LSSTDESC/desc-wfmon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]

[options.entry_points]
console_scripts =
    desc-wfmon-parsltest=desc.parsltest:main_parsltest
    desc-cpuburn=desc.parsltest:main_cpuburn
    desc-sysmon-reporter=desc.sysmon:main_reporter
